syntax = "proto3";
package dymensionxyz.dymension.streamer;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/dymensionxyz/dymension/v3/x/streamer/types";

// EpochPointer is a special object used for the streamer pagination. It helps iterate over
// streams with the specified epoch identifier within one epoch. Additionally, holds coins
// that must be distributed in this epoch.
message EpochPointer {
  // StreamID is the ID of a stream.
  uint64 stream_id = 1;
  // GaugeID is the ID of a gauge.
  uint64 gauge_id = 2;
  // EpochIdentifier is a unique reference to this particular timer.
  string epoch_identifier = 3;
  // EpochDuration is the time in between epoch ticks. It is stored in order to have
  // an ability to sort the EpochPointer slice.
  google.protobuf.Duration epoch_duration = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true
  ];
}